Fix some main sonar issues